// DCRL

syntax = "proto3";

message DCRLMessage {
    oneof message_ {
        UnsignedMessage unsigned_message = 1;
        SignedMessage signed_message = 2;
    }
}

message UnsignedMessage {
    oneof message_ {
        BlockchainRequest blockchain_request = 1;
        BlockRequest block_request = 2;
        ErrorMessage error_message = 3;
    }
}

message SignedMessage {
    Certificate certificate = 1;
    bytes signature = 2;
    oneof message_ {
        CertificateRevocation certificate_revocation = 3;
        BlockMessage block_message = 4;
        BlockchainResponse blockchain_response = 5;
        BlockResponse block_response = 6;
        ErrorMessage error_message = 7;
        Announce announce = 8;
    }
}

message CertificateRevocation {
    Certificate certificate = 1;
}

message BlockchainRequest {}

message BlockRequest {
    uint64 height = 1;
}

message ErrorMessage {
    string error = 1;
}

message BlockMessage {
    Certificate certificate = 1;
    uint64 height = 2;
    bytes previous_block = 3;
    uint64 timestamp = 4;
    bytes merkle_root = 5;
    repeated CertificateRevocation certificate_revocations = 6;
}

message BlockchainResponse {
    repeated BlockMessage blocks = 1;
}

message BlockResponse {
    BlockMessage block = 1;
}

message Certificate {
    string subject = 1;
    uint64 valid_from = 2;
    uint32 valid_length = 3;
    repeated CertificateUsage usages = 4;
    bytes signing_public_key = 5;
    bytes issuer_certificate_hash = 6;
    bytes issuer_signature = 7;
}

enum CertificateUsage {
    AUTHORITY = 1;
    PARTICIPATION = 2;
}

// Needed for new servers to tell existing ones that they now exist
//      Discovery server makes sure new people joining know everything,
//      but existing people need to be informed. It is sufficient to
//      send a signed dummy message, so that a receiver knows they should
//      try to involve the new participant when they forward messages
message Announce {
    uint64 nonce = 1;
}
